Grammar.txt

program -> program_body
program_body -> stmt_list
stmt_list -> stmt stmt_list | stmt
stmt -> print_stmt | assign_stmt | if_stmt | for_loop 
print_stmt -> PRINT print_line 
assign_stmt -> ID EQUALS arithmetic | ID EQUALS STRING
if_stmt -> IF condition body | IF condition body else_stmt
else_stmt -> ELSE body
for_loop -> FOR LPARENTHESES for_stmt RPARENTHESES body | FOR primary TO primary WITH ID body
print_line -> ID | STRING
arithmetic -> primary | primary op primary
condition -> ID relop primary
body -> OCURLY stmt_list CCURLY
for_stmt -> assign_stmt COMMA condition COMMA NUM
primary -> ID | NUM
op -> PLUS | MINUS | MULT | DIV
relop -> GREATER | LESS | GREATER_EQUAL | LESS_EQUAL | EQUALTO | NOT_EQUAL


Enumerations:
END_OF_FILE = 0, check
PRINT = 1
ID = 2 check
EQUALS = 3 check
STRING = 4
IF = 5 check
ELSE = 6 check
FOR = 7
LPARENTHESES = 8 
RPARENTHESES = 9
TO = 10
WITH = 11
OCURLY = 12 check
CCURLY = 13 check
COMMA = 14
NUM = 15 check
PLUS = 16
MINUS = 17 
MULT = 18
DIV = 19
GREATER = 20 
LESS = 21
GREATER_EQUAL = 22
LESS_EQUAL = 23
EQUALTO = 24 check
NOT_EQUAL = 25 check
